--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
  
     <section class="home" id="home">
         <div class="social">
-            <a href="https://github.com/"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/jinuarumanoor"><i class='bx bxl-github'></i></a>
            <a href="https://twitter.com/i/flow/login"><i class='bx bxl-twitter' ></i></a>
 
         </div>
         <div class="home-img">
-            <img src="jinu.jpg" alt="">
+            <img src="jjnew.jpg" alt="">
         </div>
         <div class="home-text">
             <span>Hello, I'm</span>
