--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
  
     <section class="home" id="home">
         <div class="social">
-            <a href="https://github.com/jinuarumanoor"><i class='bx bxl-github'></i></a>
-           <a href="https://twitter.com/i/flow/login"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://github.com/jinuarumanoor" target="_blank"><i class='bx bxl-github'></i></a>
+           <a href="https://twitter.com/i/flow/login" target="_blank"><i class='bx bxl-twitter' ></i></a>
 
         </div>
         <div class="home-img">
@@ -278,9 +278,9 @@
     <div class="footer">
    
         <div class="footer-social">
-            <a href="https://www.facebook.com/jinuprathap"><i class='bx bxl-facebook' ></i></a>
-            <a href="https://www.instagram.com/prathapjinu/"><i class='bx bxl-instagram' ></i></a>
-            <a href="https://www.youtube.com/channel/UC3hVPYys7_eDQ34UCx8dXLg"><i class='bx bxl-youtube' ></i></a>
+            <a href="https://www.facebook.com/jinuprathap" target="_blank"><i class='bx bxl-facebook'  ></i></a>
+            <a href="https://www.instagram.com/prathapjinu/" target="_blank"><i class='bx bxl-instagram' ></i></a>
+            <a href="https://www.youtube.com/channel/UC3hVPYys7_eDQ34UCx8dXLg" target="_blank"><i class='bx bxl-youtube'></i></a>
         </div>
  
     <!-- Link To JS -->
