--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Jinu p.v</h1>
-            <h2>software Engineer</h2>
-            <p>Working as a software developer<br> in Brototype </p>
+            <h2>Python Django Developer</h2>
+            <p>Working as a Intern<br> in Brototype </p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
  
@@ -201,7 +201,9 @@
   
           <div class="section-title">
             <h2>Resume</h2>
-            <p>Hi i am Jinu.I am Trivandrum,intersted in development phase and currently work as an intern in Brototype</p>
+            <p>Hi i am Jinu.I am Trivandrum,intersted in development phase and currently work as an intern in Brototype.I have completed malefashion
+                ecommerce website using python django
+            </p>
           </div>
   
           <div class="row">
@@ -209,7 +211,10 @@
               <h3 class="Resume">Sumary</h3>
               <div class="resume-item pb-0">
                 <h4>Jinu p.v</h4>
-                <p><em>Innovative and passionate programmer with 1 yr experience in software industry.Able to manage the task with in time.</em></p>
+                <p><em>Innovative and passionate programmer with 2 yr experience in software industry.Able to manage the task with in time.Now switch my
+                    domain to python Django and having 1 year experience as an intern in Brototype
+
+                </em></p>
                 <ul>
                   <li>Kalluthattu veedu,Arumanoor</li>
                   <li>6238382427</li>
@@ -235,7 +240,12 @@
                 <ul>
                   <li>Development phase of Various projects such as English Grammer,Womens Pluz,Students Pluz.</li>
                   <li>Designed Netflix and Whatsapp Home pages. </li>
-                 
+                  <h4>Android Developer</h4>
+                  <h5>2016 -2017</h5>
+                  <p><em>Infopark,cherthala </em></p>
+                  <ul>
+                    <li>Development phase of Various projects.</li>
+                    <li>Designed Netflix and Whatsapp Home pages. </li>
                 </ul>
               </div>
               
